tests/toylang/neg/001117_mutation.toylang
program a = { if a while then sleep; } .
